--- a/public/index.html
+++ b/public/index.html
@@ -43,4 +43,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/72a73849b0.js" crossorigin="anonymous"></script>
 </html>
