--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100;400;700&family=Unbounded:wght@600&display=swap" rel="stylesheet">
-  </head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -44,4 +45,6 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/72a73849b0.js" crossorigin="anonymous"></script>
-</html>
+<!-- Bootstrap JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </html>
